[Media Controls] Fix a bug where the volume slider re-animate when switching tabs while focued

Fix the problem by opening volume slider immediately when focused with keyboard.
Also add a logic that when volume slider is focused, unhover the volume slider won't
close it.

Bug: 912881
Change-Id: I292be0ebcf84a8b2fb9f91cc4c6df2fb1a5db694
Reviewed-on: https://chromium-review.googlesource.com/c/1368048
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: Jazz Xu <jazzhsu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614900}
Former-commit-id: 4e2e5ee56896bc0b21c6780746000663db6e53ac